cmake_minimum_required(VERSION 3.1)
project(GExtract C CXX)

include(CheckIncludeFiles)

check_include_files(byteswap.h HAVE_BYTESWAP_H)
check_include_files(dlfcn.h HAVE_DLFCN_H)
check_include_files(inttypes.h HAVE_INTTYPES_H)
check_include_files(memory.h HAVE_MEMORY_H)
check_include_files(stdbool.h HAVE_STDBOOL_H)
check_include_files(stdint.h HAVE_STDINT_H)
check_include_files(stdlib.h HAVE_STDLIB_H)
check_include_files(strings.h HAVE_STRINGS_H)
check_include_files(string.h HAVE_STRING_H)
check_include_files(sys/byteswap.h HAVE_SYS_BYTESWAP_H)
check_include_files(sys/stat.h HAVE_SYS_STAT_H)
check_include_files(sys/types.h HAVE_SYS_TYPES_H)
check_include_files(unistd.h HAVE_UNISTD_H)
check_include_files(errno.h HAVE_ERRNO_H)

file(GLOB files src/*.cpp src/mspack/*.c)
include_directories(src)
include_directories(src/mspack)
include_directories(src/unshield)
include_directories(include)

add_subdirectory(src/unshield)
add_subdirectory(src/mspack)

add_library(gextract STATIC ${files})
target_link_libraries(gextract mspack libunshield)
